# cl-weatherforecast-fetcher

./: .gitignore  CMakeLists.txt  README.md  config.json
config/: config.json
src/: CMakeLists.txt  parser.cpp  parser.h
src/back/configurator/: ConfigParser.cpp  ConfigParser.h
src/back/core/: ChordsRequester.cpp  ChordsRequester.h  CityElement.h  Core.cpp  Core.h  ForecastRequester.cpp  ForecastRequester.h  Settings.h
src/back/utils/: Exceptions.h
src/front/: CityElementUI.cpp  CityElementUI.h
